Fixed Top Level row collapsing before page load

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/base.theme.less
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/base.theme.less
@@ -1711,8 +1711,13 @@ nav#wizardNav ul {
             font-weight: 700;
             position: relative;
             display: block;
-            padding: 10px 0px;
+            padding: 0px;
             padding-right: 0px;
+
+            .workflowSectionGroupHeading {
+                padding: 10px;
+                padding-right: 0;
+            }
 
             .workflowStatusIndicator {
                 padding-left: 15px;
@@ -1836,14 +1841,14 @@ nav#wizardNav ul {
                 cursor: default;
             }
 
-            &.collapsed:before {
+            &.collapsed .workflowSectionGroupHeading:before {
                 font-family: 'Glyphicons Halflings';
                 content: "\e114";
                 float: right;
                 margin-right: 5px;
             }
 
-            &.expanded:before {
+            &.expanded .workflowSectionGroupHeading:before {
                 font-family: 'Glyphicons Halflings';
                 content: "\e113";
                 float: right;
